--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <h1>Rebekah Kati</h1>
 	<p>Institutional Repository Librarian, Open Access Advocate, Documentation Specialist</p>
 <h2>Documentation Examples</h2>
