--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 layout: default
 ---
 <h1>Rebekah Kati</h1>
-	<p>Institutional Repository Librarian, Open Access Advocate, Documentation Specialist</p>
+	<p>Institutional Repository Librarian, Project Manager, Product Owner, Open Access Advocate, Documentation Specialist</p>
 <h2>Documentation Examples</h2>
 <p><a href="https://docs.google.com/document/d/1mgQCUXSay7OGjm_IiQwWjn1bWnMhaz0H3P_h4sBjI8I/edit?usp=sharing">Hyrax 3.0 Administrator Documentation Rework</a></p>
 <p>A rework of the Samvera Hyrax documentation aimed at administrators and repository managers. These users would be customizing and setting policies for their repository platforms, but may not have technical expertise.</p>
-
 
 <p><a href="https://doi.org/10.17615/xs4b-w127">Content Liberation Project Summary</a></p>
 <p>A report outlining the three-part Content Liberation project, which aims to increase the amount of content in the Carolina Digital Repository. Updates are included as child reports.</p>
